--- a/package.json
+++ b/package.json
@@ -3,32 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "main": "index.js",
-  "dependencies": {
-    "@babel/plugin-syntax-jsx": "^7.16.7",
-    "@reduxjs/toolkit": "^1.8.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "axios": "^0.26.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.3",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^6.7.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-notifications": "^1.7.3",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "web-vitals": "^2.1.0"
-  },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "serve": "webpack-dev-server --devtool eval --mode development",
     "dev": "webpack --watch --mode development ./src/index.js --output-path ../static/jsapp/",
+    "build": "react-scripts build",
     "builds": "webpack --mode production ./src/index.js --output-path ../static/jsapp/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -52,6 +31,30 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.16.7",
+    "@babel/preset-react": "^7.17.12",
+    "@reduxjs/toolkit": "^1.8.0",
+    "@svgr/webpack": "^6.2.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.26.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^6.7.1",
+    "react-notifications": "^1.7.3",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "5.0.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "web-vitals": "^2.1.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
