--- a/package.json
+++ b/package.json
@@ -54,7 +54,11 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-datepicker": "^4.8.0",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-tooltip": "^4.2.21"
   }
 }
