--- a/package.json
+++ b/package.json
@@ -54,11 +54,17 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "@types/jest": "^28.1.0",
+    "@types/node": "^17.0.38",
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.5",
     "date-fns": "^2.28.0",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-tooltip": "^4.2.21"
+    "react-tooltip": "^4.2.21",
+    "typescript": "^4.7.2"
   }
 }
