--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-text-mask": "^5.4.3",
     "react-tooltip": "^4.2.21",
     "typescript": "^4.7.2"
   }
